# bibna

./: .gitignore  BiBNA  CMakeLists.txt  README.md  README_zh-TW.md  Unit_Test.cpp  brain_bitnet  main.cpp
docs/: brain_inspired_bitnet_design_v1.md
src/: acc.hpp  bitlinear.hpp  brain_block.hpp  common.hpp  cortical_hub.hpp  decoding.hpp  embedding.hpp  kernels.hpp  micro_circuit.hpp  mini_llm.hpp  spiking_unit.hpp  tokenizer.hpp  training.hpp
